# ctx-sharing-demo

./: .dockerignore  .gitignore  CLAUDE_SESSION_STATE.md  Dockerfile  README.md  build-and-run-local.sh  build-and-run.sh  entrypoint.sh  prepare-rust.sh  run-context-writer-demo.sh  run-dd-writer-demo.sh  run-java-demo.sh  run-simple-writer-demo.sh
.devcontainer/: devcontainer.json
.devcontainer/amd64/: devcontainer.json
.devcontainer/arm64/: devcontainer.json
async-web/: Cargo.toml  test_context.rs
async-web/src/: client_worker.rs  http_server.rs  main.rs
context-reader/: .gitignore  Cargo.toml  DATA.md  README.md  RINGBUF_TEST_README.md  inspect-ringbuf.sh  run-ringbuf-test.sh
context-reader/common/: Cargo.toml
context-reader/common/src/: lib.rs
context-reader/ebpf/: Cargo.toml  gen_bindings.sh  gen_vmlinux.sh  vmlinux.h  vmlinux_minimal.h
context-reader/ebpf/src/: main.rs  vmlinux.rs
context-reader/src/: custom_labels.rs  ebpf_loader.rs  elf_reader.rs  label_parser.rs  lib.rs  main.rs  output.rs  process.rs  ringbuf_test.rs  tls_reader.rs  tls_reader_trait.rs  v1_reader.rs  v2_reader.rs
context-reader/src/tls_symbols/: access_model.rs  dynamic_linker.rs  elf_reader.rs  memory.rs  mod.rs  offset_calc.rs  process.rs  tls_accessor.rs
context-reader/tls-symbols/: Cargo.toml
context-reader/xtask/src/: main.rs
context-writer/: Cargo.toml  README.md
context-writer/.cargo/: config.toml
context-writer/src/: main.rs
custom-labels/: .gitignore  Cargo.toml  Makefile  PLAN-reader-integration.md  README.md  binding.gyp  build.rs  dlist
custom-labels/.claude/: settings.local.json
custom-labels/src/: customlabels_v2.c  customlabels_v2.h  customlabels_v2_process.c  customlabels_v2_process.h  customlabels_v2_thread.c  customlabels_v2_thread.h  lib.rs
custom-labels/src/process_context/: encoding.rs  mod.rs  model.rs  reader.rs  tls.rs  writer.rs
custom-labels/src/v2/: error.rs  mod.rs  process.rs  reader.rs  thread.rs  (+2 more)
datadog/: README.md
datadog/dd-trace-rs/: CONTRIBUTING.md  Cargo.toml  LICENSE-3rdparty.csv  NOTICE  README.md  clippy.toml  license-tool.toml  rustfmt.toml  supported-configurations.json
datadog/dd-trace-rs/.config/: nextest.toml
datadog/dd-trace-rs/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
datadog/dd-trace-rs/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
datadog/dd-trace-rs/.github/actions/cache/: action.yaml
datadog/dd-trace-rs/.github/workflows/: all-checks.yaml  configuration.yaml  lint.yaml  pr-name.yaml  test.yaml
datadog/dd-trace-rs/datadog-opentelemetry/: Cargo.toml
datadog/dd-trace-rs/datadog-opentelemetry-mappings/: Cargo.toml
datadog/dd-trace-rs/datadog-opentelemetry-mappings/benches/: main.rs
datadog/dd-trace-rs/datadog-opentelemetry-mappings/src/: cached_config.rs  lib.rs  sdk_span.rs
datadog/dd-trace-rs/datadog-opentelemetry-mappings/src/transform/: attribute_keys.rs  mod.rs  otel_util.rs  semconv_shim.rs  transform_tests.rs
datadog/dd-trace-rs/datadog-opentelemetry/examples/: README.md
datadog/dd-trace-rs/datadog-opentelemetry/examples/propagator/: Cargo.toml
datadog/dd-trace-rs/datadog-opentelemetry/examples/propagator/src/: server.rs
datadog/dd-trace-rs/datadog-opentelemetry/examples/simple_tracing/: Cargo.toml
datadog/dd-trace-rs/datadog-opentelemetry/examples/simple_tracing/src/: main.rs
datadog/dd-trace-rs/datadog-opentelemetry/src/: ddtrace_transform.rs  lib.rs  sampler.rs  span_exporter.rs  span_processor.rs  spans_metrics.rs  text_map_propagator.rs  trace_id.rs
datadog/dd-trace-rs/datadog-opentelemetry/src/context_labels/: custom_labels_writer.rs  logging_writer.rs  mod.rs  observer.rs  writer.rs
datadog/dd-trace-rs/datadog-opentelemetry/tests/: tests.rs
datadog/dd-trace-rs/datadog-opentelemetry/tests/integration_tests/: mod.rs  opentelemetry_api.rs  tracing_api.rs
datadog/dd-trace-rs/datadog-opentelemetry/tests/snapshots/opentelemetry_api/: test_decision_less_extraction_tracestats.json  test_injection_extraction.json  test_injection_extraction_tracestats.json  test_received_traces.json  test_received_traces_tracestats.json  test_remote_config_sampling_rates.json  test_remote_config_sampling_rates_tracestats.json  test_sampling_extraction.json  test_sampling_extraction_tracestats.json
datadog/dd-trace-rs/datadog-opentelemetry/tests/snapshots/tracing_api/: test_remote_span_extraction_propagation.json  test_remote_span_extraction_propagation_tracestats.json  test_smoke.json  test_smoke_tracestats.json
datadog/dd-trace-rs/dd-trace/: Cargo.toml
datadog/dd-trace-rs/dd-trace-propagation/: Cargo.toml  LICENSE-3rdparty.yml
datadog/dd-trace-rs/dd-trace-propagation/benches/: extract_benchmark.rs  inject_benchmark.rs
datadog/dd-trace-rs/dd-trace-propagation/src/: carrier.rs  config.rs  context.rs  datadog.rs  error.rs  lib.rs  trace_propagation_style.rs  tracecontext.rs
datadog/dd-trace-rs/dd-trace-sampling/: Cargo.toml
datadog/dd-trace-rs/dd-trace-sampling/src/: agent_service_sampler.rs  constants.rs  datadog_sampler.rs  lib.rs  otel_mappings.rs  rate_limiter.rs  rate_sampler.rs  rules_sampler.rs  utils.rs
datadog/dd-trace-rs/dd-trace/benches/: smoke.rs
datadog/dd-trace-rs/dd-trace/src/: constants.rs  error.rs  lib.rs  log.rs  sampling.rs  telemetry.rs  test_utils.rs  utils.rs
datadog/dd-trace-rs/dd-trace/src/configuration/: configuration.rs  mod.rs  remote_config.rs  sources.rs  supported_configurations.rs
datadog/dd-trace-rs/docs/: AddConfigurations.md
datadog/dd-trace-rs/scripts/: Dockerfile.license  generate-licenses.sh  local_config_map_generate.py
demo-java/: .gitignore  README.md  build.gradle  start.sh
lima/: ubuntu-amd64.yaml  ubuntu-arm64.yaml
process-context/: Cargo.toml  README.md
process-context/.claude/: settings.local.json
process-context/src/: encoding.rs  lib.rs  model.rs  reader.rs  tls.rs  writer.rs
simple-writer/: Makefile  README.md  process_context.c  process_context.h  simple-writer-dlopen.c  simple-writer-exhaust-static-tls.c  simple-writer.c
tls-filler/: Makefile  tls_filler.c  tls_filler2.c  tls_filler3.c
(+2 files in other folders)
