[package]
name = "context-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
goblin = "0.9"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "ptrace", "uio"] }
procfs = "0.17"
libc = "0.2"
