# This package is not part of the parent workspace - it builds for a different target
[workspace]

[package]
name = "context-reader-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.1"
aya-log-ebpf = "0.1"

# Shared types with userspace
context-reader-common = { path = "../common" }

[[bin]]
name = "context-reader-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
