[package]
name = "dd-trace-propagation"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
dd-trace = { path = "../dd-trace" }
serde = { workspace = true, optional = true, features = [
    "derive",
] }
serde_json = { workspace = true, optional = true, features = [
    "alloc",
] }
thiserror = { version = "1.0", default-features = false }

opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_unordered = "0.3"
criterion = "0.5"

dd-trace = { path = "../dd-trace", features = ["test-utils"] }
dd-trace-propagation = { path = ".", features = ["test-utils"] }

[[bench]]
name = "inject_benchmark"
harness = false

[[bench]]
name = "extract_benchmark"
harness = false

[features]
default = ["opentelemetry"]
serde_config = ["serde", "serde_json"]
opentelemetry = ["dep:opentelemetry"]
test-utils = []
