# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dd-trace"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0.97"
rustc_version_runtime = "0.3.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hyper = { version = "1.6", features = ["client", "http1"] }
hyper-util = { version = "0.1.16", features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
http-body-util = "0.1"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
base64 = "0.21"
sha2 = "0.10"
uuid = { version = "1.11.0", features = ["v4"] }
arc-swap = "1.7.1"

# Libdatadog dependencies
ddtelemetry = { workspace = true }
ddcommon = { workspace = true }

tokio-util = "0.7"

# Test utils
criterion = { version = "0.5.1", optional = true }

[dev-dependencies]
dd-trace = { path = "./", features = ["test-utils"] }
[features]
test-utils = ["criterion"]

[[bench]]
name = "smoke"
harness = false
path = "benches/smoke.rs"
